# DLPulse

./: .gitignore  build_linux.sh  build_macos.sh  build_verbose.txt  build_windows.ps1  main.py  pyproject.toml
.github/workflows/: build.yml
desktop_tui/: README.md  __init__.py  android_cli.py  app.py  paths.py  pure_cli.py  requirements.txt  run.sh
flet_app/: README.md  cast_http.py  chromecast_helper.py  download_dir.py  ffmpeg_tools.py  file_browser_dialog.py  github_update.py  main.py  paths.py  requirements.txt  run.sh  yt_core.py  ytdlp_update.py
packaging/linux/: bundle_imageio_ffmpeg_into_linux_bundle.sh  make_appimage.sh
packaging/macos/: bundle_ffmpeg_into_app.sh  make_dmg.sh
packaging/windows/: DLPulse.nsi  build_installer.ps1  bundle_ffmpeg_into_flet_release.ps1
